--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -42,7 +42,6 @@ section,
 		background-size: cover
 		background-repeat: no-repeat
 		background-posirion: center center
-		background-color: #fff
 		height: 60px
 		width: 60px
 		margin-top: -30px
@@ -56,7 +55,6 @@ section,
 	padding-top: 25px
 
 .logo_bg 
-	background-color: #fff	
 	z-index: 100
 	padding: 10px
 	height: 125px
@@ -81,7 +79,6 @@ section,
 			a
 				&:hover
 					transition: 0.5s ease
-					color: #c79825
 					text-decoration: underline
 
 .mnu_menu_button 
@@ -101,6 +98,19 @@ ul .en
 	z-index: 50
 	position: relative
 
+.button_head
+	margin-top: 100px
+	float: left
+	margin-left: 645px
+
+a.popup_content
+	padding: 15px
+	border: 2px solid #5b5b5b
+	font-size: 20px
+	font-family: "Helvetica", sans-serif
+	font-weight: normal	
+	&:hover
+		transition: 0.5s
 
 .title_head 
 	float: right
@@ -117,23 +127,8 @@ ul .en
 	h2
 		font-size: 24px
 
-.button_head
-	margin-top: 65px
-	margin-right: -54px
-	float: right
-	padding: 0 230px
-
-.button_click
-	border: 3px solid #5b5b5b
-	padding: 10px
-	a
-		font-size: 22px
-		font-weight: bold
-	&:hover
-		transition: 0.5s ease
-
 section
-	padding: 60px 0	
+	padding: 30px 0	
 	h2
 		text-align: center
 		font-size: 28px
@@ -161,10 +156,8 @@ section
 	h2
 		margin-bottom: 50px		
 
-.left_comp
-	background-color: #fff		
+.left_comp		
 	&:hover
-		background-color: #f5f1f1
 		transition: 0.5s ease
 	.comp_img
 		text-align: center
@@ -172,35 +165,28 @@ section
 			width: 90%
 	h3 
 		padding: 15px
-		background-color: #c79e54	
 		text-align: center
 		font-size: 23px
 		text-transform: uppercase
-		color: #fff
 	p
 		text-align: center	
 		padding: 20px 45px 30px 45px
 
 .right_comp 
 	margin-top: 75px
-	background-color: #fff
 	&:hover
-		background-color: #f5f1f1
 		transition: 0.5s ease
 	.right_img
 		img
 			text-align: center
 			margin: 15px
 	h3 
-		padding: 15px 0
-		background-color: #c79e54	
+		padding: 15px 0	
 		text-align: center
 		font-size: 20px
-		text-transform: uppercase
-		color: #fff		
+		text-transform: uppercase		
 		margin-top: 5px
 		&:hover
-			background-color: #e0be82
 			transition: 0.5s ease
 
 .section_left
@@ -210,15 +196,12 @@ section
 .left_two
 	margin-top: 40px
 	i
-		background-color: #a9a9a9
-		color: #fff
 		border-radius: 50%
 		padding: 9px
 	ul
 		li
 			list-style-type: none
-			margin-bottom: 10px
-			color: #a9a9a9	
+			margin-bottom: 10px	
 	.addres_text
 		margin-top: -44px
 		margin-left: 15px
@@ -232,27 +215,23 @@ i.fa.fa-map-marker
 	button 
 		width: 100%
 		margin-top: 20px
-		background-color: #c79927
 		border: none
 		border-radius: 2px
 		padding: 10px
-		color: #fff
 		text-transform: uppercase
 		font-size: 14px
 		font-weight: 600
 		letter-spacing: 3px 
+		margin-bottom: 20px
 		&:hover
-			background-color: #d0aa66
 			transition: 0.5s ease
 	textarea
 		width: 100%
 		height: 170px
-		border: none
-		background-color: #f2f2f2	
+		border: none	
 		box-shadow: 0 0 4px rgba(0,0,0,.2) inset
 	input[type="text"],
 	input[type="email"]
-		background-color: #f2f2f2
 		border: none
 		width: 100%
 		padding: 11px
@@ -261,7 +240,6 @@ i.fa.fa-map-marker
 		box-shadow: 0 0 4px rgba(0,0,0,.2) inset
 	.color_element 
 		text-transform: uppercase
-		color: #797979
 		font-weight: bold
 		font-size: 12px	
 
@@ -276,37 +254,30 @@ i.fa.fa-map-marker
 		text-indent: 5px
 
 .about_news
-	background-color: #111111
+	margin-top: -35px
 
 .join_uor
 	text-align: center
 	input[type="email"]
-		background-color: #343434
 		border: none
 		border-radius: 2px
 		padding: 12px
 		width: 40%
-	input[placeholder="email"]	
-		color: #fff
 	button
-		background-color: #c89a25
 		border: none
 		border-radius: 2px
 		padding: 12px 20px
-		color: #fff
 		font-weight: 600
 		text-transform: uppercase	
 		font-size: 13px
 		letter-spacing: 1px
 	h4
 		text-transform: uppercase	
-		color: #fff
 
 .keep_update
 	text-align: center
 	h4
-		text-transform: uppercase	
-		color: #fff		
+		text-transform: uppercase		
 		margin-left: 20px
 	ul
 		display: inline-flex
@@ -315,15 +286,12 @@ i.fa.fa-map-marker
 		padding: 0
 		li
 			margin-left: 20px
-			font-size: 28px
-			color: #fff	
+			font-size: 28px	
 			&:hover
-				color: #c1c1c1
 				transition: 0.5s ease
 
 .main_footer
 	display: block
-	background-color: #222222
 	width: 100%
 	height: 60px
 		
@@ -332,4 +300,50 @@ i.fa.fa-map-marker
 		margin-top: 25px	
 	.top_scroll
 		float: right	
-		margin-top: -80px
+		margin-top: -76px
+		button.top_button
+			border: none
+			background: transparent
+			border-radius: 13px
+			transform: rotate(45deg)
+			i		
+				font-size: 40px
+				transform: rotate(-45deg)
+				padding: 4px
+
+.section_map	
+	iframe
+		width: 100%		
+		height: 250px		
+
+.port_descr
+	display: block
+	width: 300px
+	height: 237px
+	position: absolute
+	text-align: center
+	float: left
+	margin-left: 540px
+	top: -110px
+	input[type="text"] 
+		width: 80%
+		border: none
+		padding: 7px
+		margin-top: 25px
+		margin-bottom: 20px
+		border: 1px solid #ccc
+		margin-top: 5px
+		text-indent: 5px
+		border-radius: 2px
+	form	
+		button
+			padding: 5px 10px
+			border: none
+			font-size: 17px
+			text-indent: uppercase
+			text-transform: uppercase
+
+			
+	
+
+
