--- a/css/sass/skins/tomato.sass
+++ b/css/sass/skins/tomato.sass
@@ -30,9 +30,6 @@ h2
 .color_border
 	border-color: $color
 
-.main_color_bg
-	background-color: $main_color
-
 svg
 	height: 75px
 	width: 180px
@@ -58,7 +55,7 @@ svg
 
 .button_click
 	&:hover
-		background-color: $bg_light		
+		background-color: #ccc	
 
 .content_item 
 	background-color: #f7f5f6
@@ -88,4 +85,110 @@ form
 			color: #c79927				
 
 		
+.loader_inner
+.logo_bg 
+	background-color: #fff		
+
+a.popup_content
+	&:hover
+		background-color: #b7b3b3
+		color: #fff
+
+.left_comp
+	background-color: #fff		
+	&:hover
+		background-color: #f5f1f1
+	h3 
+		background-color: #c79e5	
+		color: #fff
+
+.right_comp 
+	background-color: #fff
+	&:hover
+		background-color: #f5f1f1
+	h3 
+		background-color: #c79e54
+		color: #fff		
+		&:hover
+			background-color: #e0be82
+
+.left_two
+	i
+		background-color: #a9a9a9	
+		color: #fff		
+	ul
+		li
+			color: #a9a9a9
+
+.main_form
+	button 
+		background-color: #c79927
+		color: #fff
+		&:hover
+			background-color: #d0aa66
+	textarea
+		background-color: #f2f2f2	
+	input[type="text"],
+	input[type="email"]
+		background-color: #f2f2f2
+	.color_element 
+		color: #797979
+
+.about_news
+	background-color: #111111
+
+.join_uor
+	text-align: center
+	input[type="email"]
+		background-color: #343434
+	input[placeholder="email"]	
+		color: #fff
+	button
+		background-color: #c89a25
+		color: #fff
+	h4	
+		color: #fff		
+
+.keep_update
+	h4	
+		color: #fff		
+	ul
+		li
+			color: #fff	
+			&:hover
+				color: #c1c1c1
+
+.main_footer
+	background-color: #222222				
+
+.copyright	
+	.top_scroll
+		button.top_button
+			background: #222222
+			i
+				color: #fff		
+
+.port_descr
+	background-color: #fff
+	h3
+		color: #5b5b5b
+	form	
+		button
+			background-color: #5b5b5b
+			color: #fff
+			
+.mnu_menu 
+	ul
+		li
+			a
+				&:hover
+					color: #c79825
+
+
+				
+
+
+	
+
+
 
