--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -287,6 +287,7 @@ i.fa.fa-map-marker
 		li
 			margin-left: 20px
 			font-size: 28px	
+			cursor: pointer
 			&:hover
 				transition: 0.5s ease
 
@@ -343,7 +344,7 @@ i.fa.fa-map-marker
 			text-indent: uppercase
 			text-transform: uppercase
 
-			
+
 	
 
 
